Trying another fix for the overflowing feature image on mobile safari

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -139,6 +139,7 @@ nav {
 }
 .feature-image {
   grid-column: 1 / span 2;
+  grid-row: 1;
   height: 100%;
   object-fit: cover;
   width: 100%;
